--- a/src/app/sistema/sistema.component.html
+++ b/src/app/sistema/sistema.component.html
@@ -8,22 +8,22 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/ingresos">INGRESOS</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('ingresos', $event)">INGRESOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/egresos">EGRESOS</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('egresos', $event)">EGRESOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/productos">PRODUCTOS</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('productos', $event)">PRODUCTOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/stock">STOCK</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('stock', $event)">STOCK</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/depositos">DEPOSITOS</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('depositos', $event)">DEPOSITOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sistema/clientes">CLIENTES</a>
+                    <a class="nav-link active" aria-current="page" href="/" (click)="navigate('clientes', $event)">CLIENTES</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -31,10 +31,10 @@
                         {{user.descripcion}}
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Opciones</a></li>
+                        <!--li><a class="dropdown-item" href="#">Opciones</a></li>
                         <li>
                             <hr class="dropdown-divider">
-                        </li>
+                        </li-->
                         <li><a class="dropdown-item" href="#" (click)="cerrarSesion()">Cerrar sesión</a></li>
                     </ul>
                 </li>
