--- a/src/app/sistema/components/clientes/clientes.component.html
+++ b/src/app/sistema/components/clientes/clientes.component.html
@@ -1,20 +1,285 @@
-<div class="container-fluid p-2">
-    <p-table [value]="products" [tableStyle]="{ 'min-width': '50rem' }" styleClass="p-datatable-sm p-datatable-gridlines p-datatable-striped">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Code</th>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Quantity</th>
-            </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-product>
-            <tr>
-                <td>{{ product.code }}</td>
-                <td>{{ product.name }}</td>
-                <td>{{ product.category }}</td>
-                <td>{{ product.quantity }}</td>
-            </tr>
-        </ng-template>
-    </p-table>
+<div class="container-fluid p-4">
+    <button type="button" class="btn btn-primary m-2" (click)="showDialog()">NUEVO</button>
+    <button type="button" class="btn btn-secondary m-2">Secondary</button>
+
+    <div class="container-fluid p-2">
+        <p-table [value]="products" [tableStyle]="{ 'min-width': '50rem' }"
+            styleClass="p-datatable-sm p-datatable-gridlines p-datatable-striped" [paginator]="true" [rows]="25"
+            [rowsPerPageOptions]="[10, 25, 50, 100, 500, 1000]">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Code</th>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Quantity</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-product>
+                <tr>
+                    <td>{{ product.code }}</td>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.category }}</td>
+                    <td>{{ product.quantity }}</td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
 </div>
+
+
+
+<p-dialog header="Nuevo cliente" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }"
+    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
+
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">CÓD.</span>
+                <input type="text" class="form-control" placeholder="Código" aria-label="Código"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">CUIT</span>
+                <input type="text" class="form-control" placeholder="C.U.I.T." aria-label="C.U.I.T."
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.cuit" (keyup.enter)="buscarCUIT()">
+            </div>
+        </div>
+    </div>
+    <div style="text-align: center;" *ngIf="spinnerCUIT">
+        <p-progressSpinner></p-progressSpinner>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Datos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.alias">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">RAZON SOCIAL</span>
+                <input type="text" class="form-control" placeholder="Razon Social" aria-label="Razon Social"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.razon_social">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Domicilio</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">LOCALIDAD</span>
+                <input type="text" class="form-control" placeholder="Localidad" aria-label="Localidad"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.localidad">
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">PROVINCIA</span>
+                <input type="text" class="form-control" placeholder="Provincia" aria-label="Provincia"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.provincia">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">DIRECCION</span>
+                <input type="text" class="form-control" placeholder="Direccion" aria-label="Direccion"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.direccion">
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">C.P.</span>
+                <input type="text" class="form-control" placeholder="Cód. postal" aria-label="Cód. postal"
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.codigo_postal">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Contacto</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">TELEFONO</span>
+                <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">CORREO</span>
+                <input type="text" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Autorizados</b>
+    </p-divider>
+    @for (autorizado of autorizados; track $index) {
+        <div class="card p-2 py-4 my-1">
+            <div class="row">
+                <div class="col-12">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">NOMBRE/APELLIDO</span>
+                        <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre"
+                            aria-describedby="basic-addon1">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">DNI</span>
+                        <input type="text" class="form-control" placeholder="N° Documento" aria-label="N° Documento"
+                            aria-describedby="basic-addon1">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1">CARGO</span>
+                        <input type="text" class="form-control" placeholder="Cargo en la empresa"
+                            aria-label="Cargo en la empresa" aria-describedby="basic-addon1">
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+
+    <button type="button" class="btn btn-sm btn-success m-2" (click)="agregarAutorizado()">AGREGAR</button> 
+    <p-divider align="left"
+        type="solid">
+        <b>Transporte</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+    <p-divider align="left" type="solid">
+        <b>Establecimientos</b>
+    </p-divider>
+    <div class="row">
+        <div class="col-12">
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">ALIAS</span>
+                <input type="text" class="form-control" placeholder="Alias" aria-label="Alias"
+                    aria-describedby="basic-addon1">
+            </div>
+        </div>
+    </div>
+</p-dialog>
