--- a/src/app/sistema/components/clientes/clientes.component.html
+++ b/src/app/sistema/components/clientes/clientes.component.html
@@ -1,13 +1,12 @@
 <div class="container-fluid p-4">
-    <button type="button" class="btn btn-primary m-2" (click)="showDialog()">NUEVO</button>
-    <button type="button" class="btn btn-secondary m-2">Secondary</button>
+    <button type="button" class="btn btn-primary m-2" (click)="mostrarModalCliente()">NUEVO</button>
 
     <div class="container-fluid p-2">
         <p-table [value]="clientes" [tableStyle]="{ 'min-width': '50rem' }" #dt1
             styleClass="p-datatable-sm p-datatable-gridlines p-datatable-striped" [paginator]="true" [rows]="25"
             [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 25, 50, 100, 500, 1000]"
             currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} registros" sortField="alias"
-            [globalFilterFields]="['alias', 'cuit', 'razon_social']" dataKey="id">
+            [globalFilterFields]="['alias', 'cuit', 'razon_social', 'codigo']" dataKey="id">
 
             <ng-template pTemplate="caption">
                 <div class="flex text-end">
@@ -23,6 +22,9 @@
 
             <ng-template pTemplate="header">
                 <tr>
+                    <th pSortableColumn="codigo" style="width:20%">
+                        CÓD. <p-sortIcon field="codigo" />
+                    </th>
                     <th pSortableColumn="alias" style="width:20%">
                         ALIAS <p-sortIcon field="alias" />
                     </th>
@@ -47,14 +49,15 @@
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-cliente>
-                <tr (dblclick)="mostrarModalCliente(cliente)">
-                    <td>{{ cliente.alias }}</td>
-                    <td>{{ cliente.cuit }}</td>
-                    <td>{{ cliente.razon_social }}</td>
-                    <td>{{ cliente.direccion }}</td>
-                    <td>{{ cliente.localidad }}</td>
-                    <td>{{ cliente.codigo_postal }}</td>
-                    <td>{{ cliente.provincia }}</td>
+                <tr (dblclick)="mostrarModalCliente(cliente.id)">
+                    <td class="text-nowrap"><strong>{{ cliente.codigo }}</strong></td>
+                    <td class="text-nowrap">{{ cliente.alias }}</td>
+                    <td class="text-nowrap">{{ cliente.cuit }}</td>
+                    <td class="text-nowrap">{{ cliente.razon_social }}</td>
+                    <td class="text-nowrap">{{ cliente.direccion }}</td>
+                    <td class="text-nowrap">{{ cliente.localidad }}</td>
+                    <td class="text-nowrap">{{ cliente.codigo_postal }}</td>
+                    <td class="text-nowrap">{{ cliente.provincia }}</td>
                 </tr>
             </ng-template>
         </p-table>
@@ -62,16 +65,15 @@
 </div>
 
 
-
-<p-dialog header="Nuevo cliente" [modal]="true" [(visible)]="visible" [style]="{ width: '50rem' }"
-    [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
+<p-dialog header="{{cliente.id ? 'Editar cliente' : 'Nuevo cliente'}}" [modal]="true" [(visible)]="visible"
+    [style]="{ width: '50rem' }" [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }" [maximizable]="true">
 
     <div class="row">
         <div class="col-12 col-md-6">
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">CÓD.</span>
                 <input type="text" class="form-control" placeholder="Código" aria-label="Código"
-                    aria-describedby="basic-addon1">
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.codigo">
             </div>
         </div>
         <div class="col-12 col-md-6">
@@ -149,7 +151,7 @@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">TELEFONO</span>
                 <input type="text" class="form-control" placeholder="Telefono" aria-label="Telefono"
-                    aria-describedby="basic-addon1">
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.telefono">
             </div>
         </div>
     </div>
@@ -158,21 +160,24 @@
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">CORREO</span>
                 <input type="text" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico"
-                    aria-describedby="basic-addon1">
+                    aria-describedby="basic-addon1" [(ngModel)]="cliente.correo">
             </div>
         </div>
     </div>
+
+    @if (cliente.id) {
+
     <p-divider align="left" type="solid">
         <b>Autorizados</b>
     </p-divider>
     @for (autorizado of autorizados; track $index) {
-    <div class="card p-2 py-4 my-1">
+    <div class="card shadow p-2 py-4 my-3">
         <div class="row">
             <div class="col-12">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">NOMBRE/APELLIDO</span>
                     <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="autorizado.descripcion">
                 </div>
             </div>
         </div>
@@ -181,14 +186,14 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">DNI</span>
                     <input type="text" class="form-control" placeholder="N° Documento" aria-label="N° Documento"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="autorizado.documento">
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">CARGO</span>
                     <input type="text" class="form-control" placeholder="Cargo en la empresa"
-                        aria-label="Cargo en la empresa" aria-describedby="basic-addon1">
+                        aria-label="Cargo en la empresa" aria-describedby="basic-addon1" [(ngModel)]="autorizado.cargo">
                 </div>
             </div>
         </div>
@@ -197,13 +202,17 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">CONTACTO</span>
                     <input type="text" class="form-control" placeholder="Teléfono/Correo" aria-label="Teléfono/Correo"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="autorizado.contacto">
                 </div>
             </div>
             <div class="col-12 col-md-4 text-end">
                 <button type="button" class="btn btn-sm btn-warning py-2 me-2"
-                    (click)="agregarAutorizado()">EDITAR</button>
-                <button type="button" class="btn btn-sm btn-danger py-2" (click)="agregarAutorizado()">ELIMINAR</button>
+                    (click)="guardarAutorizado(autorizado)">{{autorizado.id ? 'EDITAR' : 'GUARDAR'}}</button>
+
+                @if (autorizado.id) {
+                <button type="button" class="btn btn-sm btn-danger py-2"
+                    (click)="eliminarAutorizado(autorizado.id)">ELIMINAR</button>
+                }
             </div>
         </div>
     </div>
@@ -215,20 +224,21 @@
         <b>Transporte</b>
     </p-divider>
     @for (transporte of transportes; track $index) {
-    <div class="card p-2 py-4 my-1">
+    <div class="card shadow p-2 py-4 my-3">
         <div class="row mb-4 mb-md-0">
             <div class="col-12 col-md-8">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">TRANSPORTE</span>
                     <input type="text" class="form-control" placeholder="Razon Social" aria-label="Razon Social"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="transporte.transporte">
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">CUIT</span>
                     <input type="text" class="form-control" placeholder="CUIT Transportista"
-                        aria-label="CUIT Transportista" aria-describedby="basic-addon1">
+                        aria-label="CUIT Transportista" aria-describedby="basic-addon1"
+                        [(ngModel)]="transporte.cuit_transporte">
                 </div>
             </div>
         </div>
@@ -237,14 +247,14 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">CHOFER</span>
                     <input type="text" class="form-control" placeholder="Razon Social" aria-label="Razon Social"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="transporte.chofer">
                 </div>
             </div>
             <div class="col-12 col-md-4">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">CUIT</span>
                     <input type="text" class="form-control" placeholder="CUIT Chofer" aria-label="CUIT Chofer"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="transporte.cuit_chofer">
                 </div>
             </div>
         </div>
@@ -253,20 +263,24 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">PAT CH.</span>
                     <input type="text" class="form-control" placeholder="Patente chasis" aria-label="Patente chasis"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="transporte.patente_chasis">
                 </div>
             </div>
             <div class="col-6 col-md-4">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">PAT AC.</span>
                     <input type="text" class="form-control" placeholder="Patente acoplado" aria-label="Patente acoplado"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="transporte.patente_acoplado">
                 </div>
             </div>
             <div class="col-12 col-md-4 text-end">
                 <button type="button" class="btn btn-sm btn-warning py-2 me-2"
-                    (click)="agregarTransporte()">EDITAR</button>
-                <button type="button" class="btn btn-sm btn-danger py-2" (click)="agregarTransporte()">ELIMINAR</button>
+                    (click)="guardarTransporte(transporte)">{{transporte.id ? 'EDITAR' : 'GUARDAR'}}</button>
+
+                @if (transporte.id) {
+                <button type="button" class="btn btn-sm btn-danger py-2"
+                    (click)="eliminarTransporte(transporte.id)">ELIMINAR</button>
+                }
             </div>
         </div>
     </div>
@@ -275,17 +289,17 @@
     <button type="button" class="btn btn-sm btn-success m-2" (click)="agregarTransporte()">AGREGAR TRANSPORTE</button>
 
     <p-divider align="left" type="solid">
-        <b>Establecimientos</b>
+        <b>Establecimientos / Destinos</b>
     </p-divider>
 
     @for (establecimiento of establecimientos; track $index) {
-    <div class="card p-2 py-4 my-1">
+    <div class="card shadow p-2 py-4 my-3">
         <div class="row">
             <div class="col-12">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">DESCRIPCION</span>
                     <input type="text" class="form-control" placeholder="Descripcion" aria-label="Descripcion"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="establecimiento.descripcion">
                 </div>
             </div>
         </div>
@@ -294,23 +308,27 @@
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">LOCALIDAD</span>
                     <input type="text" class="form-control" placeholder="Localidad" aria-label="Localidad"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="establecimiento.localidad">
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">PROVINCIA</span>
                     <input type="text" class="form-control" placeholder="Provincia" aria-label="Provincia"
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1" [(ngModel)]="establecimiento.provincia">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 text-end">
                 <button type="button" class="btn btn-sm btn-warning py-2 me-2"
-                    (click)="agregarEstablecimiento()">EDITAR</button>
+                    (click)="guardarEstablecimiento(establecimiento)">{{establecimiento.id ? 'EDITAR' :
+                    'GUARDAR'}}</button>
+
+                @if (establecimiento.id) {
                 <button type="button" class="btn btn-sm btn-danger py-2"
-                    (click)="agregarEstablecimiento()">ELIMINAR</button>
+                    (click)="eliminarEstablecimiento(establecimiento.id)">ELIMINAR</button>
+                }
             </div>
         </div>
     </div>
@@ -318,13 +336,18 @@
     <button type="button" class="btn btn-sm btn-success m-2" (click)="agregarEstablecimiento()">AGREGAR
         ESTABLECIMIENTO</button>
 
+    }
+
     <p-divider align="left" type="solid"></p-divider>
 
     <div class="row">
         <div class="col text-end">
-            <button type="button" class="btn btn-warning m-2" (click)="agregarEstablecimiento()">CERRAR</button>
-            <button type="button" class="btn btn-danger m-2" (click)="agregarEstablecimiento()">ELIMINAR</button>
-            <button type="button" class="btn btn-success m-2" (click)="agregarEstablecimiento()">GUARDAR</button>
+            <button type="button" class="btn btn-warning m-2" (click)="visible = false">CERRAR</button>
+            @if (cliente.id) {
+            <button type="button" class="btn btn-danger m-2" (click)="eliminarCliente(cliente.id)">ELIMINAR</button>
+            }
+            <button type="button" class="btn btn-success m-2" (click)="guardarCambiosCliente()">{{cliente.id ? 'EDITAR'
+                : 'GUARDAR'}}</button>
 
         </div>
     </div>
