--- a/src/app/sistema/sistema.component.html
+++ b/src/app/sistema/sistema.component.html
@@ -31,10 +31,10 @@
                         {{user.descripcion}}
                     </a>
                     <ul class="dropdown-menu">
-                        <!--li><a class="dropdown-item" href="#">Opciones</a></li>
+                        <li><a class="dropdown-item" href="/" (click)="navigate('variables', $event)">Variables</a></li>
                         <li>
                             <hr class="dropdown-divider">
-                        </li-->
+                        </li>
                         <li><a class="dropdown-item" href="#" (click)="cerrarSesion()">Cerrar sesión</a></li>
                     </ul>
                 </li>
